# beets-bandcamp

./: .gitignore  CHANGELOG.md  README.md  README.rst  conftest.py  pyproject.toml  setup.cfg  setup.py  url2json
beetsplug/: _metaguru.py  bandcamp.py
beetsplug/bandcamp/: __init__.py  _metaguru.py
tests/: album.html  compilation.html  conftest.py  ep.html  ksointsu.json  single.html  single_track.html  test.html  test_parsing.py  test_real_queries.py  track_alt.html
