[tool.poetry]
name = "beets-bandcamp"
version = "0.2.0"
description = "Plugin for beets (http://beets.io) to use bandcamp as an autotagger source."
authors = ["Ariel George <unarbolito@gmail.com>", "Šarūnas Nejus <snejus@pm.me>"]
readme = "README.rst"
license = "GPL-2.0"
homepage = "https://github.com/snejus/beets-bandcamp"
repository = "https://github.com/snejus/beets-bandcamp"

packages = [{ include = "beetsplug" }]
include = ["LICENSE", "README.rst"]

[tool.poetry.dependencies]
python = "^3.6"

beets = ">=1.4.6"
requests = "*"
cached-property = "^1.5.2"

[tool.poetry.dev-dependencies]
dataclasses = "*"
flake8 = ">=3.8.4"
mypy = ">=0.790"
pytest = ">=6.2"
pytest-cov = ">=2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
